k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nagp2026-assignment
  labels:
    environment: development
