k8s-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: nagp2026-assignment
  labels:
    app: mongodb
spec:
  serviceName: "mongodb-headless"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0 # Specifies official MongoDB image
          ports:
            - containerPort: 27017
              name: mongo-port
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db # MongoDB default data directory
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: gke-standard-pvc # Must match the exact name of your PVC
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless # Matches the serviceName below
  namespace: nagp2026-assignment
spec:
  clusterIP: None        # <-- This makes it headless
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
